<resources>
    <string name="app_name">ADONAI GPS</string>
    <string name="label_server">SERVIDOR</string>
    <string name="label_info">Gracias por ser parte de RASTREO GPS PLUS, haga clic en continuar para acceder el sistema.</string>
    <string name="button_start">INICIAR</string>
    <string name="error_connection">Server connection failed</string>
    <string name="file_browser">File Browser</string>
    <string name="notification_channel">Default</string>
    <string name="permission_location_rationale">App requires location permission to show current location on the map</string>
    <string name="biometric_title">Biometric login</string>
    <string name="biometric_cancel">Use account password</string>
    <string name="server_url">http://adonai-gps.com:8080/</string>
</resources>
