<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:orientation="vertical"
    android:padding="@dimen/spacing_normal">

    <TextView
        android:id="@+id/label_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/spacing_normal"
        android:text="@string/app_name"
        android:textAppearance="?android:textAppearanceLarge"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/label_server"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/field_server"
        android:text="@string/label_server"
        android:textAppearance="?android:textAppearanceMedium"
        android:visibility="invisible"
        tools:visibility="invisible" />

    <EditText
        android:id="@+id/field_server"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_name"
        android:layout_marginStart="@dimen/spacing_normal"
        android:layout_marginLeft="@dimen/spacing_normal"
        android:layout_marginTop="@dimen/spacing_normal"
        android:layout_toEndOf="@+id/label_server"
        android:layout_toRightOf="@+id/label_server"
        android:text="@string/server_url"
        android:visibility="invisible"
        tools:text="@string/server_url"
        tools:visibility="invisible" />

    <TextView
        android:id="@+id/label_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/field_server"
        android:layout_marginTop="200dp"
        android:gravity="center_horizontal"
        android:text="@string/label_info"
        android:textColor="#1E87E4"
        android:textSize="16sp" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/label_info"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:background="#1E88E5"
        android:paddingStart="@dimen/spacing_normal"
        android:paddingLeft="@dimen/spacing_normal"
        android:paddingEnd="@dimen/spacing_normal"
        android:paddingRight="@dimen/spacing_normal"
        android:text="@string/button_start"
        android:textColor="#FAFFFFFF" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="487dp"
        android:layout_height="222dp"
        android:layout_below="@+id/label_name"
        android:layout_marginTop="30dp"
        app:srcCompat="@drawable/ic_logo" />

</RelativeLayout>
